--- a/config/vgg-convseq2seq.yml
+++ b/config/vgg-convseq2seq.yml
@@ -4,7 +4,8 @@ pretrain:
     cached: /tmp/tranformerorc.pth
 
 # url or local path
-weights: https://drive.google.com/uc?id=13327Y1tz1ohsm5YZMyXVMPIOjoOA0OaA
+# weights: https://drive.google.com/uc?id=13327Y1tz1ohsm5YZMyXVMPIOjoOA0OaA
+weights: /data/lz/GitHub/vietocr/weights/vgg_convseq2seq.pth
 
 backbone: vgg19_bn
 cnn:
@@ -35,6 +36,6 @@ transformer:
     dec_kernel_size: 3
     dropout: 0.1
     pad_idx: 0
-    device: cuda:1
+    device: cuda:0
     enc_max_length: 512
     dec_max_length: 512
